--- a/hogg2010.qmd
+++ b/hogg2010.qmd
@@ -22,7 +22,7 @@ format:
     include-before-body:
       text: |
         \RecustomVerbatimEnvironment{verbatim}{Verbatim}{showspaces=false,showtabs=false,breaksymbolleft={},breaklines}
-    monofont: "Iosevka-Regular"
+    monofont: "JuliaMono-Regular"
   html:
     page-layout: full
     toc-location: left-body
@@ -39,8 +39,8 @@ format:
     include-in-header:
       text: |
         <style>
-        @import url('https://fonts.googleapis.com/css2?family=Victor+Mono&display=swap');
-        .sourceCode {font-family: "Victor Mono", monospace;}
+        @font-face {font-family: JuliaMono; src: url("https://cdn.jsdelivr.net/gh/cormullion/juliamono-webfonts/JuliaMono-Regular.woff2");}
+        .sourceCode {font-family: JuliaMono, monospace;}
         </style>
     output-file: index.html
 toc: true
@@ -52,13 +52,15 @@ editor: source
 ---
 
 <!--
-use fvextra to break long line in code block
+use fvextra in latex to break long line in code block
 
-to use local fonts, they must be installed at system level, e.g. C:\Windows\Fonts
+to use local fonts, they must be installed at system level, e.g. C:\Windows\Fonts or /usr/local/share/fonts/
 
-in windows to show plot: download
-https://github.com/miyako/console-rsvg-convert/releases or https://sourceforge.net/projects/tumagcc/files/rsvg-convert-2.40.20.7z/download
-then put rsvg-convert.exe into <quarto path>\bin\tools
+to show plot in pdf, need rsvg-convert
+- in linux: install librsvg or the like
+- in windows to show plot: download rsvg-convert.exe into <quarto path>\bin\tools
+  - https://github.com/miyako/console-rsvg-convert/releases or
+  - https://sourceforge.net/projects/tumagcc/files/rsvg-convert-2.40.20.7z/download
 -->
 
 # preliminary {.unnumbered}
@@ -133,36 +135,36 @@ using Turing, StatsPlots
 
 data entry
 ```{julia}
-const full_N = 20;
-const full_x    = [201., 244.,  47., 287., 203.,  58., 210., 202., 198., 158., 165., 201., 157., 131., 166., 160., 186., 125., 218., 146.];
-const full_y    = [592., 401., 583., 402., 495., 173., 479., 504., 510., 416., 393., 442., 317., 311., 400., 337., 423., 334., 533., 344.];
-const full_σ_x  = [  9.,   4.,  11.,   7.,   5.,   9.,   4.,   4.,  11.,   7.,   5.,   5.,   5.,   6.,   6.,   5.,   9.,   8.,   6.,   5.];
-const full_σ_y  = [ 61.,  25.,  38.,  15.,  21.,  15.,  27.,  14.,  30.,  16.,  14.,  25.,  52.,  16.,  34.,  31.,  42.,  26.,  16.,  22.];
-const full_ρ_xy = [-.84,  .31,  .64, -.27, -.33,  .67, -.02, -.05, -.84, -.69,   .3, -.46, -.03,   .5,  .73, -.52,   .9,   .4, -.78, -.56];
+const N = 20;
+const x    = [201., 244.,  47., 287., 203.,  58., 210., 202., 198., 158., 165., 201., 157., 131., 166., 160., 186., 125., 218., 146.];
+const y    = [592., 401., 583., 402., 495., 173., 479., 504., 510., 416., 393., 442., 317., 311., 400., 337., 423., 334., 533., 344.];
+const σ_x  = [  9.,   4.,  11.,   7.,   5.,   9.,   4.,   4.,  11.,   7.,   5.,   5.,   5.,   6.,   6.,   5.,   9.,   8.,   6.,   5.];
+const σ_y  = [ 61.,  25.,  38.,  15.,  21.,  15.,  27.,  14.,  30.,  16.,  14.,  25.,  52.,  16.,  34.,  31.,  42.,  26.,  16.,  22.];
+const ρ_xy = [-.84,  .31,  .64, -.27, -.33,  .67, -.02, -.05, -.84, -.69,   .3, -.46, -.03,   .5,  .73, -.52,   .9,   .4, -.78, -.56];
 ```
 
 data but in tensor format, to be useful in sections 7 & 8
 ```{julia}
-const full_Z = [[full_x[i], full_y[i]] for i ∈ 1:full_N];
-const full_S = [ # covariance tensor
+const Z = [[x[i], y[i]] for i ∈ 1:N];
+const S = [ # covariance tensor
 	[
-		full_σ_x[i]^2                          full_ρ_xy[i]*full_σ_x[i]*full_σ_y[i];
-		full_ρ_xy[i]*full_σ_x[i]*full_σ_y[i]   full_σ_y[i]^2
+		σ_x[i]^2                ρ_xy[i]*σ_x[i]*σ_y[i];
+		ρ_xy[i]*σ_x[i]*σ_y[i]   σ_y[i]^2
 	]
-	for i ∈ 1:full_N
+	for i ∈ 1:N
 ];
 ```
 
 data points 5 through 20 in the table, which exclude outliers, to be used in various exercises
 ```{julia}
-const subset_N = 16;
-const subset_x    = full_x[   5:end];
-const subset_y    = full_y[   5:end];
-const subset_σ_x  = full_σ_x[ 5:end];
-const subset_σ_y  = full_σ_y[ 5:end];
-const subset_ρ_xy = full_ρ_xy[5:end];
-const subset_Z    = full_Z[   5:end];
-const subset_S    = full_S[   5:end];
+const N´ = 16;
+const x´    = x[   5:end];
+const y´    = y[   5:end];
+const σ_x´  = σ_x[ 5:end];
+const σ_y´  = σ_y[ 5:end];
+const ρ_xy´ = ρ_xy[5:end];
+const Z´    = Z[   5:end];
+const S´    = S[   5:end];
 ```
 
 options to run MCMC chains
@@ -178,14 +180,14 @@ helper functions
 ```{julia}
 const angle90 = π / 2; # useful in sections 7 & 8
 
-function print_uncertainty(x, δx; digits=2)
-	return "$(round(x; digits=digits)) ± $(round(δx; digits=digits))"
+function print_uncertainty(𝕩, δ𝕩; digits=2)
+	return "$(round(𝕩; digits=digits)) ± $(round(δ𝕩; digits=digits))"
 end
 
-function plot_ellipses(N, x, y, Z, S)
-	p = plot(x, y, seriestype=:scatter, label=nothing)
-	for i ∈ 1:N
-		covellipse!(p, Z[i], S[i], label=nothing)
+function plot_ellipses(ℕ, 𝕩, 𝕪, ℤ, 𝕊)
+	p = plot(𝕩, 𝕪, seriestype=:scatter, label=nothing)
+	for i ∈ 1:ℕ
+		covellipse!(p, ℤ[i], 𝕊[i], label=nothing)
 	end
 	return p
 end
@@ -193,11 +195,11 @@ end
 
 quick look at data
 ```{julia}
-plot(full_x, full_y, xerror=full_σ_x, yerror=full_σ_y, seriestype=:scatter, label=nothing)
+plot(x, y, xerror=σ_x, yerror=σ_y, seriestype=:scatter, label=nothing)
 ```
 
 ```{julia}
-plot_ellipses(full_N, full_x, full_y, full_Z, full_S)
+plot_ellipses(N, x, y, Z, S)
 ```
 
 # Standard practice
@@ -231,9 +233,9 @@ Using the standard linear algebra method, fit the straight line $y=m\,x+b$ to th
 :::
 
 ```{julia}
-Yₑₓ₀₁ = reshape(subset_y, :, 1); # vector to 1-column matrix
-Aₑₓ₀₁ = hcat(ones(subset_N), subset_x);
-Cₑₓ₀₁ = diagm(subset_σ_y .^ 2);
+Yₑₓ₀₁ = reshape(y´, :, 1); # vector to 1-column matrix
+Aₑₓ₀₁ = hcat(ones(N´), x´);
+Cₑₓ₀₁ = diagm(σ_y´ .^ 2);
 
 tmp = Aₑₓ₀₁' * inv(Cₑₓ₀₁); # intermediary result
 cov_bm = inv(tmp * Aₑₓ₀₁); # covariance matrix of b & m
@@ -242,7 +244,7 @@ bₑₓ₀₁, mₑₓ₀₁ = Xₑₓ₀₁;
 ```
 
 ```{julia}
-plot(subset_x, subset_y, yerror=subset_σ_y, seriestype=:scatter, label=nothing)
+plot(x´, y´, yerror=σ_y´, seriestype=:scatter, label=nothing)
 plot!(x -> mₑₓ₀₁*x + bₑₓ₀₁, label=nothing)
 ```
 
@@ -264,16 +266,16 @@ Repeat exercise 01 but for all the data points in the table. What is the standar
 :::
 
 ```{julia}
-Yₑₓ₀₂ = reshape(full_y, :, 1); # vector to 1-column matrix
-Aₑₓ₀₂ = hcat(ones(full_N), full_x);
-Cₑₓ₀₂ = diagm(full_σ_y .^ 2);
+Yₑₓ₀₂ = reshape(y, :, 1); # vector to 1-column matrix
+Aₑₓ₀₂ = hcat(ones(N), x);
+Cₑₓ₀₂ = diagm(σ_y .^ 2);
 
 tmp = Aₑₓ₀₂' * inv(Cₑₓ₀₂); # intermediary result
 cov_bm = inv(tmp * Aₑₓ₀₂); # covariance matrix of b & m
 Xₑₓ₀₂ = cov_bm * tmp * Yₑₓ₀₂;
 bₑₓ₀₂, mₑₓ₀₂ = Xₑₓ₀₂;
 
-plot(full_x, full_y, yerror=full_σ_y, seriestype=:scatter, label=nothing)
+plot(x, y, yerror=σ_y, seriestype=:scatter, label=nothing)
 plot!(x -> mₑₓ₀₁*x + bₑₓ₀₁, label="exr 01")
 plot!(x -> mₑₓ₀₂*x + bₑₓ₀₂, label="exr 02")
 ```
@@ -294,16 +296,16 @@ Generalize the method of this section to fit a general quadratic (2nd order) rel
 :::
 
 ```{julia}
-Yₑₓ₀₃ = reshape(subset_y, :, 1); # vector to 1-column matrix
-Aₑₓ₀₃ = hcat(ones(subset_N), subset_x, subset_x.^2);
-Cₑₓ₀₃ = diagm(subset_σ_y .^ 2);
+Yₑₓ₀₃ = reshape(y´, :, 1); # vector to 1-column matrix
+Aₑₓ₀₃ = hcat(ones(N´), x´, x´.^2);
+Cₑₓ₀₃ = diagm(σ_y´ .^ 2);
 
 tmp = Aₑₓ₀₃' * inv(Cₑₓ₀₃); # intermediary result
 cov_bmq = inv(tmp * Aₑₓ₀₃); # covariance matrix of b, m & q
 Xₑₓ₀₃ = cov_bmq * tmp * Yₑₓ₀₃;
 bₑₓ₀₃, mₑₓ₀₃, qₑₓ₀₃ = Xₑₓ₀₃;
 
-plot(subset_x, subset_y, yerror=subset_σ_y, seriestype=:scatter, label=nothing)
+plot(x´, y´, yerror=σ_y´, seriestype=:scatter, label=nothing)
 plot!(x -> mₑₓ₀₁*x + bₑₓ₀₁, label="exr 01")
 plot!(x -> qₑₓ₀₃*x^2 + mₑₓ₀₃*x + bₑₓ₀₃, label="exr 03")
 ```
@@ -415,7 +417,7 @@ For extra credit, plot a sampling of 10 lines drawn from the marginalized poster
 :::
 
 ```{julia}
-@model function modelₑₓ₀₆(N, x, y, σ_y)
+@model function modelₑₓ₀₆(ℕ, 𝕩, 𝕪, σ_𝕪)
 	b ~ Normal(0, 5)
 	m ~ Normal(0, 5)
 
@@ -425,24 +427,24 @@ For extra credit, plot a sampling of 10 lines drawn from the marginalized poster
 	V_bad ~ InverseGamma(.001, .001) # additional variance for outliers
 
 	# faster computation: marginalize discrete param
-	for i ∈ 1:N
-		ŷ_i = b + m * x[i]
-		σ_bad = sqrt(σ_y[i]^2 + V_bad)
+	for i ∈ 1:ℕ
+		𝕪̂ᵢ = b + m * 𝕩[i]
+		σ_bad = sqrt(σ_𝕪[i]^2 + V_bad)
 
 		## method 1: manually modify log likehood
 		#=
-		 inlier = log1p(-P_bad) + logpdf(Normal(ŷ_i  , σ_y[i]), y[i])
-		outlier = log(   P_bad) + logpdf(Normal(Y_bad, σ_bad ), y[i])
+		 inlier = log1p(-P_bad) + logpdf(Normal(𝕪̂ᵢ   , σ_𝕪[i]), 𝕪[i])
+		outlier = log(   P_bad) + logpdf(Normal(Y_bad, σ_bad ), 𝕪[i])
 		Turing.@addlogprob! logaddexp(inlier, outlier)
 		=#
 
 		## medthod 2: use convenient constructors for mixture models
-		y[i] ~ MixtureModel(Normal, [(ŷ_i, σ_y[i]), (Y_bad, σ_bad)], [1 - P_bad, P_bad])
+		𝕪[i] ~ MixtureModel(Normal, [(𝕪̂ᵢ, σ_𝕪[i]), (Y_bad, σ_bad)], [1 - P_bad, P_bad])
 
 	end
 end
 
-chainsₑₓ₀₆ = sample(modelₑₓ₀₆(full_N, full_x, full_y, full_σ_y), NUTS(), MCMCThreads(), N_samples, N_chains; num_warmup=N_warmup, thinning=N_thinning);
+chainsₑₓ₀₆ = sample(modelₑₓ₀₆(N, x, y, σ_y), NUTS(), MCMCThreads(), N_samples, N_chains; num_warmup=N_warmup, thinning=N_thinning);
 ```
 
 diagnostics of chains:
@@ -478,7 +480,7 @@ density!(p, chainsₑₓ₀₆[:V_bad], subplot=6, label=nothing, title="V_bad")
 ```{julia}
 bₑₓ₀₆ = mean(chainsₑₓ₀₆[:b]);
 mₑₓ₀₆ = mean(chainsₑₓ₀₆[:m]);
-plot(full_x, full_y, yerror=full_σ_y, seriestype=:scatter, label=nothing)
+plot(x, y, yerror=σ_y, seriestype=:scatter, label=nothing)
 plot!(x -> mₑₓ₀₂*x + bₑₓ₀₂, label="exr 02")
 plot!(x -> mₑₓ₀₆*x + bₑₓ₀₆, label="exr 06")
 ```
@@ -494,7 +496,7 @@ Now repeat the problem, but dividing all the data uncertainty variances $\sigma_
 :::
 
 ```{julia}
-chainsₑₓ₀₇ = sample(modelₑₓ₀₆(full_N, full_x, full_y, full_σ_y ./ 2), NUTS(), MCMCThreads(), N_samples, N_chains; num_warmup=N_warmup, thinning=N_thinning);
+chainsₑₓ₀₇ = sample(modelₑₓ₀₆(N, x, y, σ_y ./ 2), NUTS(), MCMCThreads(), N_samples, N_chains; num_warmup=N_warmup, thinning=N_thinning);
 summarystats(chainsₑₓ₀₇)[:, [:mean, :std, :mcse, :rhat]]
 ```
 ```{julia}
@@ -512,7 +514,7 @@ compute probability of each point to be classified as outlier
 
 ```{julia}
 # Compute the un-normalized log probabilities for each cluster
-log_prob_assign_outliers = zeros(N_chains, N_samples, full_N);
+log_prob_assign_outliers = zeros(N_chains, N_samples, N);
 Threads.@threads for step ∈ 1:N_samples
 	for chain ∈ 1:N_chains
 		b = chainsₑₓ₀₆[:b][step, chain]
@@ -520,12 +522,12 @@ Threads.@threads for step ∈ 1:N_samples
 		V_bad = chainsₑₓ₀₆[:V_bad][step, chain]
 		P_bad = chainsₑₓ₀₆[:P_bad][step, chain]
 		Y_bad = chainsₑₓ₀₆[:Y_bad][step, chain]
-		for i ∈ 1:full_N
-			ŷ_i = b + m * full_x[i]
-			inliers_log_prob = log1p(-P_bad) + logpdf(Normal(ŷ_i, full_σ_y[i]), full_y[i])
+		for i ∈ 1:N
+			ŷᵢ = b + m * x[i]
+			inliers_log_prob = log1p(-P_bad) + logpdf(Normal(ŷᵢ, σ_y[i]), y[i])
 
-			σ_bad_i = sqrt(full_σ_y[i]^2 + V_bad)
-			outliers_log_prob = log(P_bad) + logpdf(Normal(Y_bad, σ_bad_i), full_y[i])
+			σ_badᵢ = sqrt(σ_y[i]^2 + V_bad)
+			outliers_log_prob = log(P_bad) + logpdf(Normal(Y_bad, σ_badᵢ), y[i])
 
 			# Bayes rule to compute the assignment probability: P(cluster = 1 | data) ∝ P(data | cluster = 1) P(cluster = 1)
 			log_prob_assign_outliers[chain, step, i] = outliers_log_prob - logaddexp(inliers_log_prob, outliers_log_prob)
@@ -571,12 +573,12 @@ Did these posterior distributions get smaller or larger with the reduction in th
 :::
 
 ```{julia}
-chainsₑₓ₀₉ = sample(modelₑₓ₀₆(subset_N, subset_x, subset_y, subset_σ_y),      NUTS(), MCMCThreads(), N_samples, N_chains; num_warmup=N_warmup, thinning=N_thinning);
+chainsₑₓ₀₉ = sample(modelₑₓ₀₆(N´, x´, y´, σ_y´),      NUTS(), MCMCThreads(), N_samples, N_chains; num_warmup=N_warmup, thinning=N_thinning);
 summarystats(chainsₑₓ₀₉)[:, [:mean, :std, :mcse, :rhat]]
 ```
 
 ```{julia}
-chainsₑₓ₀₉_½err = sample(modelₑₓ₀₆(subset_N, subset_x, subset_y, subset_σ_y ./ 2), NUTS(), MCMCThreads(), N_samples, N_chains; num_warmup=N_warmup, thinning=N_thinning);
+chainsₑₓ₀₉_½err = sample(modelₑₓ₀₆(N´, x´, y´, σ_y´ ./ 2), NUTS(), MCMCThreads(), N_samples, N_chains; num_warmup=N_warmup, thinning=N_thinning);
 summarystats(chainsₑₓ₀₉_½err)[:, [:mean, :std, :mcse, :rhat]]
 ```
 
@@ -617,14 +619,14 @@ Assess the $\chi^2$ value for the fit performed in exercise 01 (do that problem 
 ```{julia}
 tmp = Yₑₓ₀₁ - Aₑₓ₀₁ * Xₑₓ₀₁; # intermediary result
 χ²ₑₓ₀₁ = tmp' * inv(Cₑₓ₀₁) * tmp;
-χ²ₑₓ₀₁ / (subset_N - 1) # χ² per degrees of freedom
+χ²ₑₓ₀₁ / (N´ - 1) # χ² per degrees of freedom
 ```
 This is a pretty good fit. Aside from the plot showing a linear fit that generally follows the points (whether the points themselves are linear or not), the reduced $\chi^2$ metric is pretty close to 1. This is indicating that on average the squared difference between my model and each point is roughly on par (actually slightly larger) than the measured inherent variance of each point. Can't ask for too much better than that when you're assuming the functional form of a distribution.
 
 ```{julia}
 tmp = Yₑₓ₀₂ - Aₑₓ₀₂ * Xₑₓ₀₂; # intermediary result
 χ²ₑₓ₀₂ = tmp' * inv(Cₑₓ₀₂) * tmp;
-χ²ₑₓ₀₂ / (full_N - 1) # χ² per degrees of freedom
+χ²ₑₓ₀₂ / (N - 1) # χ² per degrees of freedom
 ```
 This is a horrid fit. Squared differences 15× larger than what’s described by measured variances.
 
@@ -637,12 +639,12 @@ Re-do the fit of exercise 01 but setting all $\sigma_{y_i}^2=S$, that is, ignori
 :::
 
 ```{julia}
-Yₑₓ₁₁ = reshape(subset_y, :, 1); # vector to 1-column matrix
-Aₑₓ₁₁ = hcat(ones(subset_N), subset_x);
+Yₑₓ₁₁ = reshape(y´, :, 1); # vector to 1-column matrix
+Aₑₓ₁₁ = hcat(ones(N´), x´);
 
 Sₑₓ₁₁ = 1:2000;
 χ²ₑₓ₁₁ = map(Sₑₓ₁₁) do s
-	σ²ₑₓ₁₁ = fill(s, subset_N)
+	σ²ₑₓ₁₁ = fill(s, N´)
 	Cₑₓ₁₁ = diagm(σ²ₑₓ₁₁)
 	tmp1 = inv(Cₑₓ₁₁)
 	tmp2 = Aₑₓ₁₁' * tmp1
@@ -651,10 +653,10 @@ Sₑₓ₁₁ = 1:2000;
 	return only(tmp3' * tmp1 * tmp3) # get scalar from 1×1 matrix
 end
 
-subsetNm2 = subset_N - 2
+subsetNm2 = N´ - 2
 plot(Sₑₓ₁₁, χ²ₑₓ₁₁, seriestype=:scatter, yaxis=:log, xlabel="S", ylabel="χ²", label=nothing)
 hline!([subsetNm2], label="χ²=N-2")
-vline!([mean(subset_σ_y .^ 2)], label="mean σ²")
+vline!([mean(σ_y´ .^ 2)], label="mean σ²")
 ```
 
 value S would be between:
@@ -671,7 +673,7 @@ Sₑₓ₁₁[findfirst(x -> x < subsetNm2, χ²ₑₓ₁₁)]
 
 Sₑₓ₁₁bis = 938:.01:939;
 χ²ₑₓ₁₁bis = map(Sₑₓ₁₁bis) do s
-	σ²ₑₓ₁₁ = fill(s, subset_N)
+	σ²ₑₓ₁₁ = fill(s, N´)
 	Cₑₓ₁₁ = diagm(σ²ₑₓ₁₁)
 	tmp1 = inv(Cₑₓ₁₁)
 	tmp2 = Aₑₓ₁₁' * tmp1
@@ -684,7 +686,7 @@ plot(Sₑₓ₁₁bis, χ²ₑₓ₁₁bis, seriestype=:scatter, xlabel="S", yla
 hline!([subsetNm2], label="χ²=N-2")
 ```
 
-mean variances $\left(\sigma_{y_i}^2\right)_{i=1}^N$ of the true data set: `{julia} mean(subset_σ_y .^ 2)`
+mean variances $\left(\sigma_{y_i}^2\right)_{i=1}^N$ of the true data set: `{julia} mean(σ_y´ .^ 2)`
 
 The uniform offset $S$ necessary to make $\chi^2 = N-2$ is quite larger than both the mean and median variances $\left(\sigma_{y_i}^2\right)_{i=1}^N$ of the true data set. If the data were in fact linear with some measurement uncertainties, perhaps the uncertainties themselves are underestimated.
 
@@ -706,17 +708,17 @@ $$
 $$
 
 ```{julia}
-@model function modelₑₓ₁₂(N, x, y)
+@model function modelₑₓ₁₂(ℕ, 𝕩, 𝕪)
 	b ~ Normal(0, 5)
 	m ~ Normal(0, 5)
 	S ~ InverseGamma(.001, .001) # common variance for all data
 
-	for i ∈ 1:N
-		y[i] ~ Normal(b + m*x[i], sqrt(S))
+	for i ∈ 1:ℕ
+		𝕪[i] ~ Normal(b + m*𝕩[i], sqrt(S))
 	end
 end
 
-chainsₑₓ₁₂ = sample(modelₑₓ₁₂(subset_N, subset_x, subset_y), NUTS(), MCMCThreads(), N_samples, N_chains; num_warmup=N_warmup, thinning=N_thinning);
+chainsₑₓ₁₂ = sample(modelₑₓ₁₂(N´, x´, y´), NUTS(), MCMCThreads(), N_samples, N_chains; num_warmup=N_warmup, thinning=N_thinning);
 summarystats(chainsₑₓ₁₂)[:, [:mean, :std, :mcse, :rhat]]
 ```
 
@@ -724,7 +726,7 @@ summarystats(chainsₑₓ₁₂)[:, [:mean, :std, :mcse, :rhat]]
 bₑₓ₁₂ = mean(chainsₑₓ₁₂[:b]);
 mₑₓ₁₂ = mean(chainsₑₓ₁₂[:m]);
 Sₑₓ₁₂ = mean(chainsₑₓ₁₂[:S]);
-plot(subset_x, subset_y, yerror=fill(sqrt(Sₑₓ₁₂), subset_N), seriestype=:scatter, label=nothing)
+plot(x´, y´, yerror=fill(sqrt(Sₑₓ₁₂), N´), seriestype=:scatter, label=nothing)
 plot!(x -> mₑₓ₁₂*x + bₑₓ₁₂, label="exr 12")
 plot!(x -> mₑₓ₀₁*x + bₑₓ₀₁, label="exr 01")
 ```
@@ -793,19 +795,19 @@ Using the method of this section, fit the straight line $y=m\,x+b$ to the $x$, $
 :::
 
 ```{julia}
-@model function modelₑₓ₁₃(N, Z, S)
+@model function modelₑₓ₁₃(ℕ, ℤ, 𝕊)
 	b ~ Normal(0, 5) # intercept
 	θ ~ Uniform(-angle90, angle90) # angle of the fitted line, use this instead of slope
-	v = [-sin(θ) cos(θ)]' # unit vector orthogonal to the line
+	v⃗ = [-sin(θ) cos(θ)]' # unit vector orthogonal to the line
 
-	for i ∈ 1:N
-		Δ_i = dot(Z[i], v) - b*v[1] # orthogonal displacement of each data point from the line
-		Σ²_i = dot(v', S[i], v) # orthogonal variance of projection of each data point to the line
-		Turing.@addlogprob! -.5*(Δ_i^2 / Σ²_i + log(abs(Σ²_i)) + log1p(tan(θ)^2))
+	for i ∈ 1:ℕ
+		Δᵢ = dot(ℤ[i], v⃗) - b*v⃗[1] # orthogonal displacement of each data point from the line
+		Σᵢ² = dot(v⃗', 𝕊[i], v⃗) # orthogonal variance of projection of each data point to the line
+		Turing.@addlogprob! -.5*(Δᵢ^2 / Σᵢ² + log(abs(Σᵢ²)) + log1p(tan(θ)^2))
 	end
 end
 
-chainsₑₓ₁₃ = sample(modelₑₓ₁₃(subset_N, subset_Z, subset_S), NUTS(), MCMCThreads(), N_samples, N_chains; num_warmup=N_warmup, thinning=N_thinning);
+chainsₑₓ₁₃ = sample(modelₑₓ₁₃(N´, Z´, S´), NUTS(), MCMCThreads(), N_samples, N_chains; num_warmup=N_warmup, thinning=N_thinning);
 summarystats(chainsₑₓ₁₃)[:, [:mean, :std, :mcse, :rhat]]
 ```
 
@@ -813,7 +815,7 @@ summarystats(chainsₑₓ₁₃)[:, [:mean, :std, :mcse, :rhat]]
 bₑₓ₁₃ = mean(chainsₑₓ₁₃[:b]);
 mₑₓ₁₃ = tan(mean(chainsₑₓ₁₃[:θ]));
 
-plot_ellipses(subset_N, subset_x, subset_y, subset_Z, subset_S)
+plot_ellipses(N´, x´, y´, Z´, S´)
 plot!(x -> mₑₓ₁₃*x + bₑₓ₁₃, label="exr 13")
 plot!(x -> mₑₓ₀₁*x + bₑₓ₀₁, label="exr 01")
 ```
@@ -885,21 +887,21 @@ Re-do exercise 13, but now allowing for an orthogonal intrinsic Gaussian varianc
 
 
 ```{julia}
-@model function modelₑₓ₁₇(N, Z, S)
+@model function modelₑₓ₁₇(ℕ, ℤ, 𝕊)
 	b ~ Normal(0, 5) # intercept
 	θ ~ Uniform(-angle90, angle90) # angle of the fitted line, use this instead of slope
-	v = [-sin(θ) cos(θ)]' # unit vector orthogonal to the line
+	v⃗ = [-sin(θ) cos(θ)]' # unit vector orthogonal to the line
 	V ~ InverseGamma(.001, .001) # intrinsic Gaussian variance orthogonal to the line
 
-	for i ∈ 1:N
-		Δ_i = dot(Z[i], v) - b*v[1] # orthogonal displacement of each data point from the line
-		Σ²_i = dot(v', S[i], v) # orthogonal variance of projection of each data point to the line
-		tmp = Σ²_i + V # intermediary result
-		Turing.@addlogprob! -.5*(Δ_i^2 / tmp + log(abs(tmp)) + log1p(tan(θ)^2))
+	for i ∈ 1:ℕ
+		Δᵢ = dot(ℤ[i], v⃗) - b*v⃗[1] # orthogonal displacement of each data point from the line
+		Σᵢ² = dot(v⃗', 𝕊[i], v⃗) # orthogonal variance of projection of each data point to the line
+		tmp = Σᵢ² + V # intermediary result
+		Turing.@addlogprob! -.5*(Δᵢ^2 / tmp + log(abs(tmp)) + log1p(tan(θ)^2))
 	end
 end
 
-chainsₑₓ₁₇ = sample(modelₑₓ₁₇(subset_N, subset_Z, subset_S), NUTS(), MCMCThreads(), N_samples, N_chains; num_warmup=N_warmup, thinning=N_thinning);
+chainsₑₓ₁₇ = sample(modelₑₓ₁₇(N´, Z´, S´), NUTS(), MCMCThreads(), N_samples, N_chains; num_warmup=N_warmup, thinning=N_thinning);
 summarystats(chainsₑₓ₁₇)[:, [:mean, :std, :mcse, :rhat]]
 ```
 
@@ -910,7 +912,7 @@ mₑₓ₁₇ = tan(θₑₓ₁₇);
 Vₑₓ₁₇ = mean(chainsₑₓ₁₇[:V]);
 move_up = Vₑₓ₁₇ / cos(θₑₓ₁₇)
 
-plot_ellipses(subset_N, subset_x, subset_y, subset_Z, subset_S)
+plot_ellipses(N´, x´, y´, Z´, S´)
 plot!(x -> mₑₓ₁₇*x + bₑₓ₁₇, label="exr 17")
 plot!(x -> mₑₓ₁₇*x + bₑₓ₁₇ + move_up, linestyle=:dash, label=nothing)
 plot!(x -> mₑₓ₁₇*x + bₑₓ₁₇ - move_up, linestyle=:dash, label=nothing)
@@ -926,10 +928,8 @@ Re-do exercise 17 but as a Bayesian, with sensible Bayesian priors on $(\theta,b
 :::
 
 ```{julia}
-Vₑₓ₁₇bis = reduce(vcat, chainsₑₓ₁₇[:V].data)
-level95 = quantile(Vₑₓ₁₇bis, [0.025, 0.975])
-level99 = quantile(Vₑₓ₁₇bis, [0.005, 0.995])
+# confidence level α → 2 quantiles: 1/2 ± α/2
+level9x = quantile(reduce(vcat, chainsₑₓ₁₇[:V].data), [.5 + .95/2, .5 + .99/2])
 density(chainsₑₓ₁₇[:V], title="V", label=nothing)
-vline!(level95, label="95%")
-vline!(level99, label="99%")
+vline!(level9x, label=["95%", "99%"])
 ```
